Adicionado html e css

--- a/index.html
+++ b/index.html
@@ -2,34 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
+    <div id="main">
+      <img src="./images/bg-pattern-card.svg" alt="Capa" id="img-1">
+      <img src="./images/image-victor.jpg" alt="Foto de Perfil" id="img-2">
+      
+      <h1>Victor Crest</h1> 
+      <h2>26</h2>
+      <p>London</p>
 
-  80K
-  Followers
+      <div class="status">
+        <div>
+          <h1>80K</h1> 
+          <p>Followers</p> 
+        </div>
+        <div>
+          <h1>80K</h1> 
+          <p>803K Likes</p>   
+        </div>
+        <div>
+          <h1>80K</h1> 
+          <p>1.4K Photos</p> 
+        </div>
+      </div>
+    </div>
+      
 
-  803K
-  Likes
-
-  1.4K
-  Photos
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <footer>
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p> 
+      <p>Coded by <a href="https://github.com/yuriaguiar-86">Yuri Aguiar</a></p>
+    </footer>
   </div>
 </body>
 </html>
